fixed delay of faders; enhanced level selector

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
             android:name=".MainGameActivity"
             android:exported="false" />
         <activity
+            android:name=".LevelSelectActivity"
+            android:exported="false" />
+        <activity
             android:name=".WelcomeActivity"
             android:exported="true">
             <intent-filter>
