--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.example.cpudefense"
+        applicationId 'de.chadenas.cpudefense'
         minSdk 21
         targetSdk 31
         versionCode 12
