--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId 'de.chadenas.cpudefense'
         minSdk 21
         targetSdk 33
-        versionCode 28
-        versionName "1.28"
+        versionCode 29
+        versionName "1.29-alpha"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
