--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
         minSdk 21
         targetSdk 33
         versionCode 33
-        versionName "1.33-alpha"
+        versionName "1.33"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
