--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
         minSdk 21
         targetSdk 34
         versionCode 44
-        versionName "1.44-alpha"
+        versionName "1.44"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
