--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,14 @@ android {
         versionName "1.46"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        dependenciesInfo {
+            // Disables dependency metadata when building APKs.
+            includeInApk = false
+            // Disables dependency metadata when building Android App Bundles.
+            includeInBundle = false
+        }
+
     }
 
     androidResources {
