--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ android {
     buildTypes {
         release {
             minifyEnabled false
+            vcsInfo.include false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.debug
         }
