--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.9.1'
+        classpath 'com.android.tools.build:gradle:8.9.2'
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.10'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -13,9 +13,10 @@ buildscript {
 }
 
 plugins {
-    id("org.jetbrains.dokka") version "1.8.20"
+    id('org.jetbrains.dokka') version '2.0.0'
 }
 
-tasks.register('clean', Delete) {
+tasks.register('xclean', Delete) {
+    mustRunAfter('clean')
     delete rootProject.layout.buildDirectory
 }
